--- a/gb/18/11/16/n10856181.md
+++ b/gb/18/11/16/n10856181.md
@@ -1,15 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wlrgim293/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中华传统文化之叹——古城劫</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2018/11/VCG111172400473-600x400.jpg" />
-<h6>五千年文明，69年来，历劫遇难。图为北京故宫角楼等地标建筑。（大纪元资料室）
-</h6>
+
+<h6></h6>
 <hr>
-	<p>【大纪元2018年11月21日讯】华夏的<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%8F%A4%E9%83%BD.md#1">古都</a>和重镇，饱经沧桑，气韵深沉。北方的大气磅礴、南国的灵动秀美，风采各异、辉映九州。可悲、可叹，五千年文明，69年来，历劫遇难。城墙、城门被拆除，珍贵文物被砸烂，名胜古迹被摧毁。一场浩劫刚刚结束，新的扫除又迅速来袭，更加彻底、更加猛烈。</p>
+	<p>【大纪元2018年11月21日讯】华夏的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%A4%E9%83%BD.md#1">古都</a>和重镇，饱经沧桑，气韵深沉。北方的大气磅礴、南国的灵动秀美，风采各异、辉映九州。可悲、可叹，五千年文明，69年来，历劫遇难。城墙、城门被拆除，珍贵文物被砸烂，名胜古迹被摧毁。一场浩劫刚刚结束，新的扫除又迅速来袭，更加彻底、更加猛烈。</p>
 <p>自上世纪80年代起，在所谓“改革开放”的进程中，在“改造”和“改善”的旗号下，大批文化遗迹被接连铲除，古老民居被推倒，历史街区迅速萎缩。传统的价值，随着美丽载体的消亡而不断地被剥离。悠悠古风不再，哀哉中华！</p>
 <h2><strong>文化古城名存实亡</strong></h2>
-<p>如出一辙的乱象，在全国各地不停地上演：拆旧建新、拓宽公路、房产开发、仿<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%8F%A4%E5%BB%BA%E7%AD%91.md#1">古建筑</a>替代真正古董。在急功近利、官商勾结、以权代法的狂躁和荒诞中，深邃的内涵——天人合一、阴阳五行、长幼有序、尊卑有别等哲理和原则，随着古建筑、古民居的消失而被摒弃，一座座古城走向没落、衰亡。</p>
+<p>如出一辙的乱象，在全国各地不停地上演：拆旧建新、拓宽公路、房产开发、仿<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%A4%E5%BB%BA%E7%AD%91.md#1">古建筑</a>替代真正古董。在急功近利、官商勾结、以权代法的狂躁和荒诞中，深邃的内涵——天人合一、阴阳五行、长幼有序、尊卑有别等哲理和原则，随着古建筑、古民居的消失而被摒弃，一座座古城走向没落、衰亡。</p>
 <p>据大陆媒体不完全统计，2012年，中国有至少30座城市正在开展或策划“古城重建”，项目投资从数亿元到上百亿元不等。“唐宋气象”、“千年历史”等噱头令各地政府趋之若鹜。</p>
 <p>2013年，大陆媒体报导，据专家反映，在中国现有的119个历史文化名城中，20个城市已经没有历史文化街区了，因为那些老宅院、老街巷都被拆掉了，而那是历史文化名城的必要组成部分。</p>
 <p>著名建筑学家阮仪三受访时指出：“古城，是城市文化的根。吸收传统建筑的营养，才能创造出新的城市建筑。”</p>
@@ -19,19 +18,19 @@
 <p>北京的城墙和城门之殇，已是举世皆知的巨大遗憾。不幸的是，自上世纪80年代起，旧城区内动荡不止，金融街等开发项目横行无阻，将京城民居的最大特色、中国的代表建筑——四合院大举消灭。数十万、近百万居民被迫放弃了自己的家园，告别了原有的温馨安定。老北京的风貌被严重破坏，京味儿渐渐远去。</p>
 <p>随着大量四合院被强拆，文物保护工作者和房产被侵权者的呼吁及相关法律诉讼引起了社会的关注。2003年3月，联合国教科文组织因南池子拆建事件向北京当局表达了忧虑，但未获回应。</p>
 <p>梁思成之子、历史学家梁从诫说：“故宫没人敢动，就去动四合院。四合院是胡同的主要组成部分，把胡同拆了，把四合院拆了，全部变成高楼大厦，北京也不再是北京，是另一个城市了。”</p>
-<p>著名<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%8F%A4%E9%83%BD.md#1">古都</a>保护工作者、建筑师华揽洪之女华新民说：“从北京到全中国，就这么无情地拆呀拆呀，我们还能给孩子们留下什么历史文化遗产呢？”</p>
-<figure id="attachment_10856254" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/11/VCG111163413480-2007-06-04-CaoXueqin-1.jpg"><img class="size-large wp-image-10856254" src="https://i.epochtimes.com/assets/uploads/2018/11/VCG111163413480-2007-06-04-CaoXueqin-1-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">图为北京曹雪芹故居的残垣。（大纪元资料室）</figcaption></figure>
+<p>著名<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%A4%E9%83%BD.md#1">古都</a>保护工作者、建筑师华揽洪之女华新民说：“从北京到全中国，就这么无情地拆呀拆呀，我们还能给孩子们留下什么历史文化遗产呢？”</p>
+<figure id="attachment_10856254" aria-describedby="caption-attachment-10856254" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/11/VCG111163413480-2007-06-04-CaoXueqin-1.jpg"><img class="size-large wp-image-10856254" src="https://i.epochtimes.com/assets/uploads/2018/11/VCG111163413480-2007-06-04-CaoXueqin-1-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-10856254" class="wp-caption-text">图为北京曹雪芹故居的残垣。（大纪元资料室）</figcaption></figure>
 <h2><strong>西安——除了城墙以外</strong></h2>
 <p>西安，古名长安，是世界四大古都之一、丝绸之路的起点，以悠久的历史文化遗产闻名于世。周、秦、汉、唐四大王朝曾在此定都，市内和郊外留存大量的名胜古迹、珍稀文物，为其赢得“天然历史博物馆”之美誉。</p>
-<p>西安的古民居称作西安四合院，主要以清朝及民国时期的建筑为主。此类长方形的深宅大院，多为两进或三进式，大部分都有精美的雕饰，艺术价值很高。由<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%B0%91%E5%B1%85.md#1">传统民居</a>构成的街区充满古朴的气息，体现了城市的“文脉”精华，凝聚人气，给街市带来活力。</p>
+<p>西安的古民居称作西安四合院，主要以清朝及民国时期的建筑为主。此类长方形的深宅大院，多为两进或三进式，大部分都有精美的雕饰，艺术价值很高。由<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%B0%91%E5%B1%85.md#1">传统民居</a>构成的街区充满古朴的气息，体现了城市的“文脉”精华，凝聚人气，给街市带来活力。</p>
 <p>1990年以前，在西安城墙以内，有着两三百年以上历史的老宅院占了半数以上。自上世纪90年代初开始，西安市政府以低洼地改造为名，实则为经济利益驱动，大面积地拆除历史街区。</p>
 <p>2002年，夏家什字17号、民国陕西第一任督军陈树藩的宅院即将被拆的消息在全国引起强烈反响。众多专家呼吁叫停、提交议案，媒体追踪报导，还有数万名西安市民前去陈家参观声援，希望政府能够取消拆迁计划。</p>
 <p>陈树藩之子、著名书法家陈泽秦向法院起诉，但是莲湖区法院维持拆迁决议，西安市中级法院也驳回了陈泽秦的上诉。2004年3月17日夜，陈家老宅被强拆，各类建筑构件和历史文物遭到哄抢。</p>
-<p>1993年，西安市公布的“需要保护的<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%B0%91%E5%B1%85.md#1">传统民居</a>宅院和历史性纪念性建筑名单”里，有32处明清民居，其中27处已被夷为平地，包括督军老宅。</p>
+<p>1993年，西安市公布的“需要保护的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%B0%91%E5%B1%85.md#1">传统民居</a>宅院和历史性纪念性建筑名单”里，有32处明清民居，其中27处已被夷为平地，包括督军老宅。</p>
 <p>陈树藩的孙女陈长慧和记者谈起此事，非常难过。她说：“印象中1995年以前，古城的基本面貌还在，从2001年以后，儿时的记忆就已经找寻不到了，曾经让人惊心动魄、让人神往的东西再也找不着了，对有着千年历史的文化古都来说，文化上的损失太大了。”</p>
 <p>2005年3月30日，外媒披露，莲湖区拆迁办伙同黑社会，强行拆毁民宅，打伤十多名市民。</p>
 <p>2016年6月，陕西记者报导，西安传统民居仅剩45处。如今，西安徒有城墙，令人痛惜。</p>
-<figure id="attachment_10856240" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/11/VCG11491138122.jpg"><img class="size-large wp-image-10856240" src="https://i.epochtimes.com/assets/uploads/2018/11/VCG11491138122-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">西安的高家大院，七世官宅，属三院四进式砖木结构四合院，其主体是明崇祯年间的建筑。（大纪元资料室）</figcaption></figure>
+<figure id="attachment_10856240" aria-describedby="caption-attachment-10856240" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/11/VCG11491138122.jpg"><img class="size-large wp-image-10856240" src="https://i.epochtimes.com/assets/uploads/2018/11/VCG11491138122-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10856240" class="wp-caption-text">西安的高家大院，七世官宅，属三院四进式砖木结构四合院，其主体是明崇祯年间的建筑。（大纪元资料室）</figcaption></figure>
 <h2><strong>安阳——失去了机会</strong></h2>
 <p>河南省安阳市，甲骨文的故乡，有3300年的建城史、500多年建都史。安阳城内原来基本保持了明清以来的古城风貌。1996年，安阳市政府在新老城区之间规划道路，其中一条直穿古城，把老城一劈为二。市长不听劝阻，加速施工。今天，五代后周时建造的文峰塔，失去了周边的环境，孤独地矗立在路中央。</p>
 <p>2011年，安阳市国土资源局发布公告，要开始对安阳老城南大街片改造了。网民佳泉在微博上发声：“将要进行的南大街改造和北大街商业区，再加上穿城而过的文峰中路，就像一个巨大的十字架，借助老城改造的名义，压在已经简称一千多年的安阳老城身上，毁掉了安阳老城发展文化旅游的可能。就是你再重建鼓楼，再建几个老城门，安阳老城也不再是以前的安阳老城。安阳将永远失去一个机会。”</p>
@@ -47,7 +46,7 @@
 <p>然而，推土机的轰鸣，淹没了昔日的风雅，将纵贯全城的文化命脉，连根拔起。</p>
 <p>上世纪80年代到90年代的旧城改造运动，导致南京历史街区飞速减少。进入21世纪，南京市政府又对秦淮河边的人家进行了几轮拆迁，曾引发轰轰烈烈的“老城南保卫战”。</p>
 <p>2006年，“建设新城南”的改造项目启动，秦淮区、白下区的门东、颜料坊、安品街、钓鱼台、船板巷五处秦淮河沿岸的历史街区被纳入拆除范围，明清街区面临灭绝。</p>
-<figure id="attachment_10856245" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/11/40aedf61321986a88b1ff728b1d1ca6e.jpg"><img class="size-large wp-image-10856245" src="https://i.epochtimes.com/assets/uploads/2018/11/40aedf61321986a88b1ff728b1d1ca6e-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">2002年，秦淮河边的民居。（大纪元资料室）</figcaption></figure>
+<figure id="attachment_10856245" aria-describedby="caption-attachment-10856245" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/11/40aedf61321986a88b1ff728b1d1ca6e.jpg"><img class="size-large wp-image-10856245" src="https://i.epochtimes.com/assets/uploads/2018/11/40aedf61321986a88b1ff728b1d1ca6e-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-10856245" class="wp-caption-text">2002年，秦淮河边的民居。（大纪元资料室）</figcaption></figure>
 <p>当时，为了保护古城，正在北京学习的南京青年姚远起草了《关于保留南京历史旧城区的紧急呼吁》，发给300多位相关专家和代表委员。谢辰生、舒乙等人都对他表示支持和鼓励。</p>
 <p>姚远在信中写道，秦淮可谓南京的城市之源、城市之魂。“秦淮老街的拆与留，关系着老南京的死与生。”他并且发问：“六百多年来，秦淮老街没有毁于清军入关、太平天国等历次内战，也没有毁于日本侵略者的炮火，难道却要彻底毁在我们这代人的手上吗？”</p>
 <p>对于南京的城市建设，多位中国文博、规划和建筑界领域的学者联名写信呼吁，秦淮河明清历史街区是南京作为国家历史文化名城的根基所在，应该保存、修复、复兴，而非一拆了之。</p>
@@ -63,7 +62,7 @@
 <p>1998年，“旧城改造”启动，旧城区的多条街道上的深宅大院被成片拆毁，连纪念三位抗英总兵的“三忠祠”也被迁建。取而代之的是“洗头房”、桑拿屋等现代化处所，民众戏称新街道为“洗头一条街”。</p>
 <p>定海古城被毁的消息引来学者和网民的痛斥。1999年7月，定海镇的10户居民联名状告舟山市政府违反《文物保护法》和《城市规划法》，破坏历史文化名城。其中蓝家和刘家大院最引人关注，开发商公然宣称：“只要搞掉这两家，其它的就可以扫平了！”</p>
 <p>刘宅为清末著名商人刘显哉所造，宅院内存有大量文物史料。整栋建筑具有很高的历史价值、建筑科学史价值和艺术价值。?2000年5月10日，这场民告官的官司二审结案，原告败诉，刘宅等一批传统建筑被强制拆毁。<strong>?</strong></p>
-<figure id="attachment_10856247" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/11/VCG11461266932.jpg"><img class="size-large wp-image-10856247" src="https://i.epochtimes.com/assets/uploads/2018/11/VCG11461266932-600x395.jpg" alt="" width="600" b="395" /></a><figcaption class="wp-caption-text">2014年12月25日，浙江省舟山市定海区，一位老人站在一处老住宅的废墟前。（大纪元资料室）</figcaption></figure>
+<figure id="attachment_10856247" aria-describedby="caption-attachment-10856247" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/11/VCG11461266932.jpg"><img class="size-large wp-image-10856247" src="https://i.epochtimes.com/assets/uploads/2018/11/VCG11461266932-600x395.jpg" alt="" width="600" b="395" /></a><figcaption id="caption-attachment-10856247" class="wp-caption-text">2014年12月25日，浙江省舟山市定海区，一位老人站在一处老住宅的废墟前。（大纪元资料室）</figcaption></figure>
 <h2><strong>结语</strong></h2>
 <p>毁灭还在发生。一个又一个古城的内涵与美丽被掏空，被填充进不伦不类之物。守望故土、穿越时空的美好标志被移除；家庭、社区、城镇的记忆被割裂，世代传承的故事戛然而止。所有被消失的优雅，永远不可能修复。</p>
 <p>文化的王牌被无情地抛弃，城市因此丢弃了灵魂。丧失了传统文化和道德观，古国的亿万子民，便成无根的飘萍，在无知和迷茫中滑落。我们，是否将失去明天？@*#</p>
@@ -72,43 +71,48 @@
 《两处老宅一存一毁 一喜一忧》，三秦都市报，2005年2月28日。<br />
 刘晓蓝，“阮仪三：我们要有一种保护文化遗产的情怀”，新民周刊，2011年11月30日。<br />
 郭少峰，“不能在城镇化过程中把文化‘化’掉”，新京报，2013年2月26日。</p>
-<p>（点阅“<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E4%B8%AD%E8%8F%AF%E5%82%B3%E7%B5%B1%E6%96%87%E5%8C%96%E4%B9%8B%E5%98%86.md#1" target="_blank" rel="noopener noreferrer">中华传统文化之叹</a>”系列文章）</p>
+<p>（点阅“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E8%8F%AF%E5%82%B3%E7%B5%B1%E6%96%87%E5%8C%96%E4%B9%8B%E5%98%86.md#1" target="_blank" rel="noopener noreferrer">中华传统文化之叹</a>”系列文章）</p>
 <p>责任编辑：高义</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/7/9/3/n1822464.md#1">申渊：是谁破坏了北京的古建筑?</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/9/5/7/n2519350.md#1">唐代的宗教建筑(下)</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/7/18/n2969601.md#1">帝都风韵犹存——古都西安</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/12/6/30/n3624453.md#1">北京故宫曾险被强拆改建“党中央大楼”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/9/3/n1822464.md#1">申渊：是谁破坏了北京的古建筑?</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/5/7/n2519350.md#1">唐代的宗教建筑(下)</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/7/18/n2969601.md#1">帝都风韵犹存——古都西安</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/6/30/n3624453.md#1">北京故宫曾险被强拆改建“党中央大楼”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9844503.md#1" target="_blank">毛泽东诗词的“血旗情结”</a></li><li><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546426.md#1" target="_blank">中共强摘器官证据呈递联合国 媒体聚焦</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/27/n9898377.md#1" target="_blank">折断的蝴蝶翅膀──慈禧御前女官舞蹈家裕容龄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/11/n10473939.md#1" target="_blank">受化学毒剂侵害 越战老兵绝望中见证奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/16/n10856181.htm">中华传统文化之叹——古城劫</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/16/n10856181.htm">中华传统文化之叹——古城劫</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wlrgim293/djy/blob/master/gb/18/11/16/n10856181.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/11/16/n10856181.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
